@@ -62,8 +62,7 @@ namespace HepMC {
 	// write event listing key before first event only.
 	if ( !m_finished_first_event_io ) {
 	    m_finished_first_event_io = 1;
-	    m_file << "\n" << "HepMC::IO_ExtendedAscii-Version "
-	           << versionName();
+	    m_file << "\n" << "HepMC::Version " << versionName();
 	    m_file << "\n" << "HepMC::IO_ExtendedAscii-START_EVENT_LISTING\n";
 	}
 	//
