@@ -1,4 +1,5 @@
 
+HepMC::Version 2.01.03
 HepMC::IO_Ascii-START_EVENT_LISTING
 E 34 -1.0000000000000000e+00 -1.0000000000000000e+00 -1.0000000000000000e+00 20 0 438 0 0
 V -1 0 0 0 0 0 1 2 0
