@@ -1,4 +1,6 @@
+HepMC::Version 2.01.03
 0 Run  HepMC::IO_AsciiParticles eye-readable events output
+#      HepMC::Version 2.01.03
   #  stat pdg  moth1   px        py         pz     energy    mass      eta
 34 Event
 1310 particles
