@@ -1,3 +1,10 @@
+
+  --------------------------  HepMC-2.01.03  --------------------------
+
+2007-07-11  Lynn Garren
+
+	* src/IO*.cc: write HepMC version number
+
   --------------------------  HepMC-2.01.02  --------------------------
 
 2007-07-10  Lynn Garren
